08-infra-k3s/manifests/service-definitions/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app: homepage
spec:
  selector:
    app: homepage
  ports:
  - port: 4002
    targetPort: 4002
    protocol: TCP
  type: ClusterIP
