08-infra-k3s/manifests/service-definitions/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: default
  labels:
    app: homepage
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`aldo-f.duckdns.org`)
    kind: Rule
    services:
    - name: homepage
      port: 4002
  tls:
    secretName: homepage-tls-secret
